<resources>
    <string name="app_name">Sketchy</string>
    <string name="ability1_description">Description of Ability 1</string>
    <string name="ability2_description">Description of Ability 2</string>
    <string name="ability3_description">Description of Ability 3</string>
    <string name="ability4_description">Description of Ability 4</string>
    <string name="ability5_description">Description of Ability 5</string>
    <string name="ability6_description">Description of Ability 6</string>


</resources>